🛡️ Sentinel: Fix sensitive data exposure in logs (#491)
* 🛡️ Sentinel: [HIGH] Fix sensitive data exposure in logs

🚨 Severity: HIGH
💡 Vulnerability: The full job prompt (which may contain API keys, secrets, or PII) was logged in plain text when a session creation failed.
🎯 Impact: This data was stored in logs and exposed via the log API, allowing authenticated users (or anyone with log access) to view sensitive prompts.
🔧 Fix: Removed the logging of `job.Prompt` on error. The error message still includes the `job.Id` for debugging purposes.
✅ Verification: Added a regression test `server/internal/worker/background_job_security_test.go` that verifies sensitive prompts are not logged on failure.

* Fix CI: Use pnpm for tests and e2e

- Update `ui/Dockerfile.test` to install pnpm and use `pnpm-lock.yaml`.
- Update `.github/workflows/ci.yml` to use `pnpm` for `test` and `e2e` jobs.
- Fixes failures where `npm ci` was failing due to missing `package-lock.json`.

* Fix CI: Rebuild better-sqlite3 in Docker

- Added `pnpm rebuild better-sqlite3` to `ui/Dockerfile.test` to fix "Could not locate the bindings file" error during e2e tests.
- This ensures native modules are correctly built for the Docker container environment.

* Fix CI: Force reinstall better-sqlite3 in Docker

- Replaced `pnpm rebuild` with `pnpm remove better-sqlite3 && pnpm add better-sqlite3` in `ui/Dockerfile.test` to force a clean installation and compilation of native bindings.
- Added `python3` to dependencies to ensure build tools are available.

* Fix CI: Reorder Dockerfile steps for e2e

- Moved `COPY ui/ .` before `pnpm install` in `ui/Dockerfile.test`.
- This ensures dependencies are installed on top of the source code and native modules are built correctly in the container environment.
- Continues to run `pnpm rebuild better-sqlite3`.

* Fix CI: Remove lockfile in test container to force build

- Removed `pnpm-lock.yaml` in `ui/Dockerfile.test` before `pnpm install`.
- This prevents `pnpm` from fe

--- a/ui/Dockerfile.test
+++ b/ui/Dockerfile.test
@@ -1,7 +1,7 @@
 FROM mcr.microsoft.com/playwright:v1.57.0-noble
 
-# Install Go
-RUN apt-get update && apt-get install -y wget build-essential && \
+# Install Go, Python, and sqlite3
+RUN apt-get update && apt-get install -y wget build-essential python3 sqlite3 && \
     wget https://go.dev/dl/go1.24.0.linux-amd64.tar.gz && \
     tar -C /usr/local -xzf go1.24.0.linux-amd64.tar.gz && \
     rm go1.24.0.linux-amd64.tar.gz
@@ -12,17 +12,20 @@ WORKDIR /app
 ENV CI=true
 ENV NODE_OPTIONS="--max-old-space-size=4096"
 
-# Copy package files
-COPY ui/package.json ui/package-lock.json ./
-
-# Install dependencies
-RUN npm ci
-RUN ln -s /app/node_modules /node_modules
-
-# Copy source code
+# Copy source code first
 COPY ui/ .
 COPY proto/ /proto/
 COPY server/ /server/
+
+# Ensure no existing lockfiles or node_modules interfere
+RUN rm -rf pnpm-lock.yaml package-lock.json node_modules
+
+# Install dependencies using npm (fresh resolution)
+# We use npm install directly which generates a fresh package-lock.json and installs
+RUN npm install
+
+# Rebuild native modules explicitly from source to match container arch
+RUN npm rebuild better-sqlite3 --build-from-source
 
 # Pre-build backend
 RUN cd /server && go mod download && CGO_ENABLED=1 go build -o /app/server_bin cmd/server/main.go
